[gd_scene load_steps=4 format=2]

[ext_resource path="res://src/user interface/DetailsButton2.gd" type="Script" id=1]
[ext_resource path="res://assets/user interface/themes/secondary_font.tres" type="DynamicFont" id=2]
[ext_resource path="res://assets/user interface/themes/MinimalUI/MinimalUI.tres" type="Theme" id=3]

[node name="DetailsButton" type="Button"]
margin_right = 140.0
margin_bottom = 50.0
rect_pivot_offset = Vector2( 70, 25 )
size_flags_horizontal = 4
size_flags_vertical = 6
size_flags_stretch_ratio = 0.1
theme = ExtResource( 3 )
custom_fonts/font = ExtResource( 2 )
text = "Dettagli"
script = ExtResource( 1 )
next_scene_path = "res://src/screens/UserDataScreen.tscn"

[connection signal="button_down" from="." to="." method="_on_button_down"]
[connection signal="button_up" from="." to="." method="_on_button_up"]
[connection signal="pressed" from="." to="." method="_on_DetailsButton_pressed"]
